--- a/MP3Demo/src/main/resources/application.yml
+++ b/MP3Demo/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
 
 #mybatis
 mybatis-plus:
+  # xml
   mapper-locations: classpath:mapper/*Mapper.xml
   # 实体扫描，多个package用逗号或者分号分隔
-  type-enums-package: com.fengwenyi.mp3demo.enums
-  # 扫描枚举类 # 支持统配符 * 或者 ; 分割
   type-aliases-package: com.fengwenyi.mp3demo.model
-
+  # 扫描枚举类 # 支持统配符 * 或者 ; 分割
+  type-enums-package: com.fengwenyi.mp3demo.enums
   global-config:
     #刷新mapper 调试神器
     db-config:
