环境搭建（80%），获取用户列表接口（未测试）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# 服务端口
+server.port=8080
+# 应用名称
+spring.application.name=mybatis-plus-example
+# 启用环境
+spring.profiles.active=dev
 
+# ########################################
+# MyBatis-Plus
+# ########################################
+# xml
+mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
+# 实体扫描，多个package用逗号或者分号分隔
+mybatis-plus.type-aliases-package=com.fengwenyi.mybatis_plus_example.db.entity
+# mybatis-plus.global-config.db-config.id-type=ASSIGN_ID
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.cache-enabled=true
