修改配置文件编码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# ·şÎñ¶Ë¿Ú
+# æœåŠ¡ç«¯å£
 server.port=8080
-# Ó¦ÓÃÃû³Æ
+# åº”ç”¨åç§°
 spring.application.name=mybatis-plus-example
-# ÆôÓÃ»·¾³
+# å¯ç”¨ç¯å¢ƒ
 spring.profiles.active=dev
 
 # ########################################
@@ -10,7 +10,7 @@ spring.profiles.active=dev
 # ########################################
 # xml
 mybatis-plus.mapper-locations=classpath:mapper/*Mapper.xml
-# ÊµÌåÉ¨Ãè£¬¶à¸öpackageÓÃ¶ººÅ»òÕß·ÖºÅ·Ö¸ô
+# å®ä½“æ‰«æï¼Œå¤šä¸ªpackageç”¨é€—å·æˆ–è€…åˆ†å·åˆ†éš”
 mybatis-plus.type-aliases-package=com.fengwenyi.mybatis_plus_example.db.entity
 # mybatis-plus.global-config.db-config.id-type=ASSIGN_ID
 mybatis-plus.global-config.db-config.logic-delete-value=1
