--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-# Êı¾İ¿â
+# æ•°æ®åº“
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mybatis-plus-example?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=123456
 
-# ´òÓ¡sql
+# æ‰“å°sql
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.log4j2.Log4j2Impl
