--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <groupId>com.fengwenyi</groupId>
     <artifactId>MyBatis-Plus-Example</artifactId>
     <version>3.2.1-BUILD</version>
+    <packaging>jar</packaging>
     <name>MyBatis-Plus-Example</name>
     <description>Spring Boot 整合 MyBatis Plus 实例</description>
 
