--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
             <artifactId>api-result</artifactId>
             <version>${api-result.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/p6spy/p6spy -->
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
