--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,28 +17,17 @@ mybatis-plus:
   # 扫描枚举类 # 支持统配符 * 或者 ; 分割
   type-enums-package: com.fengwenyi.mybatisplusexample.entity.enums
   global-config:
-    #刷新mapper 调试神器
     db-config:
-      #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-      id-type: ID_WORKER
-      #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-      field-strategy: NOT_EMPTY
-      #驼峰下划线转换
-      #column-underline: true
       #数据库大写下划线转换
-      #capital-mode: true
+      capital-mode: true
       #逻辑删除配置
-      logic-delete-value: 1
-      logic-not-delete-value: 0
-      db-type: mysql
-    refresh: true
-      #自定义填充策略接口实现
-      #meta-object-handler: com.baomidou.springboot.xxx
-      #自定义SQL注入器
-    #sql-injector: com.baomidou.springboot.xxx
+      # logic-delete-field: delete_status # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: 1 # 逻辑删除
+      logic-not-delete-value: 0 # 正常
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
+    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
 
 logback:
   appName: mybatis-plus-example
